--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,30 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python: 当前文件",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal"
+        },
+        {
             "name": "start.py",
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/start.py",
+            "console": "integratedTerminal",
+            "args": [
+                "--entity",
+                "AU",
+                "--env",
+                "uat"
+            ],
+        },
+        {
+            "name": "main.py",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/movie/main.py",
             "console": "integratedTerminal",
             "args": [
                 "--entity",
